Revert "propagate type arguments from expression to function return type (#3124)" (#3143)
This reverts commit 97e1de8a4a2e63aa748d4a67d37d3f94215cfecd.